@@ -15,9 +15,9 @@ plugins {
   id 'idea'
   id 'eclipse'
   id 'project-report'
-  id 'com.diffplug.spotless' version '6.11.0'
+  id 'com.diffplug.spotless' version '6.12.0'
   id 'com.github.johnrengelman.shadow' version '6.1.0'
-  id "org.sonarqube" version "3.4.0.2513"
+  id "org.sonarqube" version "3.5.0.2730"
   id 'jacoco'
 }
 
@@ -28,11 +28,15 @@ project.ext {
     handlebars     : '4.3.1',
     jetty          : '11.0.12',
     guava          : '31.1-jre',
-    jackson        : '2.13.4.20221013',
+    jackson        : '2.14.1',
     xmlUnit        : '2.9.0',
     jsonUnit       : '2.36.0',
     junitJupiter   : '5.9.1'
   ]
+}
+
+configurations {
+  standaloneOnly
 }
 
 dependencies {
@@ -54,7 +58,7 @@ dependencies {
   api "com.fasterxml.jackson.core:jackson-core",
       "com.fasterxml.jackson.core:jackson-annotations",
       "com.fasterxml.jackson.core:jackson-databind"
-  api "org.apache.httpcomponents.client5:httpclient5:5.1.3"
+  api "org.apache.httpcomponents.client5:httpclient5:5.2.1"
   api "org.xmlunit:xmlunit-core:$versions.xmlUnit"
   api "org.xmlunit:xmlunit-legacy:$versions.xmlUnit", {
     exclude group: 'junit', module: 'junit'
@@ -65,7 +69,10 @@ dependencies {
     exclude group: 'org.ow2.asm', module: 'asm'
   }
   api "org.ow2.asm:asm:9.4"
-  api "org.slf4j:slf4j-api:2.0.3"
+
+  implementation "org.slf4j:slf4j-api:1.7.36"
+  standaloneOnly "org.slf4j:slf4j-nop:1.7.36"
+
   api "net.sf.jopt-simple:jopt-simple:5.0.4"
 
   compileOnly("junit:junit:4.13.2") {
@@ -92,12 +99,12 @@ dependencies {
   testImplementation("org.junit.platform:junit-platform-testkit")
   testRuntimeOnly("org.junit.vintage:junit-vintage-engine")
   testImplementation("org.junit.platform:junit-platform-launcher")
-  testImplementation 'org.mockito:mockito-junit-jupiter:4.8.1'
+  testImplementation 'org.mockito:mockito-junit-jupiter:4.11.0'
 
   testImplementation "org.hamcrest:hamcrest-core:2.2"
   testImplementation "org.hamcrest:hamcrest-library:2.2"
-  testImplementation 'org.mockito:mockito-core:4.8.0'
-  testImplementation 'org.mockito:mockito-junit-jupiter:4.8.1'
+  testImplementation 'org.mockito:mockito-core:4.11.0'
+  testImplementation 'org.mockito:mockito-junit-jupiter:4.11.0'
   testImplementation "net.javacrumbs.json-unit:json-unit:$versions.jsonUnit"
   testImplementation "org.skyscreamer:jsonassert:1.2.3"
   testImplementation 'com.toomuchcoding.jsonassert:jsonassert:0.6.2'
@@ -119,7 +126,7 @@ dependencies {
     exclude group: 'org.slf4j', module: 'slf4j-api'
     exclude group: 'io.netty', module: 'netty-all'
   }
-  testImplementation "io.netty:netty-all:4.1.84.Final"
+  testImplementation "io.netty:netty-all:4.1.86.Final"
 
   constraints {
     implementation "net.minidev:json-smart:2.4.8", {
@@ -193,7 +200,8 @@ allprojects {
     mavenCentral()
   }
 
-  version = '2.34.0'
+  version = '3.0.0-beta-1'
+
 
   sourceCompatibility = 11
   targetCompatibility = 11
@@ -256,7 +264,7 @@ task testJar(type: Jar, dependsOn: testClasses) {
 final DOCS_DIR = project(':').rootDir.getAbsolutePath() + '/docs-v2'
 
 jar {
-  archiveBaseName.set('wiremock-jre8')
+  archiveBaseName.set('wiremock')
   manifest {
     attributes("Main-Class": "com.github.tomakehurst.wiremock.standalone.WireMockServerRunner")
     attributes("Add-Exports": "java.base/sun.security.x509")
@@ -264,7 +272,11 @@ jar {
 }
 
 shadowJar {
-  archiveBaseName.set('wiremock-jre8-standalone')
+  configurations = [
+    project.configurations.runtimeClasspath,
+    project.configurations.standaloneOnly
+  ]
+  archiveBaseName.set('wiremock-standalone')
 
   relocate "org.mortbay", 'wiremock.org.mortbay'
   relocate "org.eclipse", 'wiremock.org.eclipse'
@@ -288,6 +300,7 @@ shadowJar {
   relocate "jakarta.servlet", "wiremock.jakarta.servlet"
   relocate "org.checkerframework", "wiremock.org.checkerframework"
   relocate "org.hamcrest", "wiremock.org.hamcrest"
+  relocate "org.slf4j", "wiremock.org.slf4j"
 
   dependencies {
     exclude(dependency('junit:junit'))
@@ -450,6 +463,13 @@ task 'bump-minor-version' {
       }
     }
   }
+}
+
+tasks.withType(JavaCompile) {
+  options.compilerArgs.addAll([
+    "--add-exports",
+    "java.base/sun.security.x509=ALL-UNNAMED"
+  ])
 }
 
 int getMajorVersion() {
